--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 <h3>Bhawanjali</h3>
                                 <p class="team-role">Performance Engineer & Frontend Developer</p>
                                 <p class="team-id">102203870</p>
-                                <p class="team-description">Focuses on user experience design and frontend implementation</p>
+                                <p class="team-description">performance optimization and frontend implementation</p>
                                 <div class="team-links">
                                     <a href="https://github.com/bhawanjali" target="_blank" class="team-link">
                                         <i data-lucide="github"></i>
@@ -310,7 +310,7 @@
 
                         <div class="team-card">
                             <div class="team-avatar">
-                                <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=150&h=150&fit=crop&crop=face" alt="Megha">
+                                <img src="Assets/megha.jpg" alt="Megha">
                             </div>
                             <div class="team-content">
                                 <h3>Megha</h3>
@@ -318,10 +318,10 @@
                                 <p class="team-id">102203874</p>
                                 <p class="team-description">Expert in cultural context analysis and dataset development</p>
                                 <div class="team-links">
-                                    <a href="https://github.com/megha874" target="_blank" class="team-link">
+                                    <a href="https://github.com/meghab1230" target="_blank" class="team-link">
                                         <i data-lucide="github"></i>
                                     </a>
-                                    <a href="https://linkedin.com/in/megha874" target="_blank" class="team-link">
+                                    <a href="https://www.linkedin.com/in/megha-b95453280/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="team-link">
                                         <i data-lucide="linkedin"></i>
                                     </a>
                                 </div>
@@ -330,18 +330,18 @@
 
                         <div class="team-card">
                             <div class="team-avatar">
-                                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=150&h=150&fit=crop&crop=face" alt="Rithik Verma">
+                                <img src="Assets/Rithik.png" alt="Rithik Verma">
                             </div>
                             <div class="team-content">
                                 <h3>Rithik Verma</h3>
                                 <p class="team-role">System Architect & UI/UX Designer</p>
                                 <p class="team-id">102399003</p>
-                                <p class="team-description">Handles system architecture and performance optimization</p>
+                                <p class="team-description">Handles system architecture and Focuses on user experience design</p>
                                 <div class="team-links">
-                                    <a href="https://github.com/rithikverma" target="_blank" class="team-link">
+                                    <a href="https://github.com/ritvik78" target="_blank" class="team-link">
                                         <i data-lucide="github"></i>
                                     </a>
-                                    <a href="https://linkedin.com/in/rithikverma" target="_blank" class="team-link">
+                                    <a href="https://www.linkedin.com/in/rithik-verma-74592226a/" target="_blank" class="team-link">
                                         <i data-lucide="linkedin"></i>
                                     </a>
                                 </div>
@@ -384,7 +384,7 @@
                                     <option value="hindi">Hindi</option>
                                     <option value="punjabi">Punjabi</option>
                                     <option value="english">English</option>
-                                    <option value="hinglish">Hinglish (Mixed)</option>
+                                    <option value="hinglish">Hinglish </option>
                                 </select>
                             </div>
                             <div class="form-group">
