Replace team member images with local assets

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="team-grid">
                         <div class="team-card">
                             <div class="team-avatar">
-                                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&h=150&fit=crop&crop=face" alt="Udayan Raj">
+                                <img src="Assets/udayan raj.jpeg" alt="Udayan Raj">
                             </div>
                             <div class="team-content">
                                 <h3>Udayan Raj</h3>
@@ -290,7 +290,7 @@
 
                         <div class="team-card">
                             <div class="team-avatar">
-                                <img src="https://images.unsplash.com/photo-1494790108755-2616b612b123?w=150&h=150&fit=crop&crop=face" alt="Bhawanjali">
+                                <img src="Assets/bhawanjali.jpg" alt="Bhawanjali">
                             </div>
                             <div class="team-content">
                                 <h3>Bhawanjali</h3>
