--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                     <a href="https://github.com/udayanraj" target="_blank" class="team-link">
                                         <i data-lucide="github"></i>
                                     </a>
-                                    <a href="https://linkedin.com/in/udayanraj" target="_blank" class="team-link">
+                                    <a href="https://www.linkedin.com/in/udayan-raj" target="_blank" class="team-link">
                                         <i data-lucide="linkedin"></i>
                                     </a>
                                 </div>
