--- a/index.html
+++ b/index.html
@@ -118,16 +118,7 @@
             <div class="header-container">
                 <div class="logo-section">
                     <div class="logo">
-                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="16" cy="16" r="14" fill="url(#logoGradient2)" stroke="#fff" stroke-width="2"/>
-                            <path d="M12 14h8M12 18h6M10 10h12v12H10z" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
-                            <defs>
-                                <linearGradient id="logoGradient2" x1="0%" y1="0%" x2="100%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#667eea"/>
-                                    <stop offset="100%" style="stop-color:#764ba2"/>
-                                </linearGradient>
-                            </defs>
-                        </svg>
+                        <img src="Assets/logo watchdog.png" width="32" height="32" viewBox="0 0 32 32">
                         <span class="logo-text">WATCHDOG</span>
                     </div>
                     <div class="status-indicator">
