--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
         <div class="login-card">
             <div class="login-header">
                 <div class="logo">
-                    <svg width="48" height="48" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="16" cy="16" r="14" fill="url(#logoGradient)" stroke="#fff" stroke-width="2"/>
-                        <path d="M12 14h8M12 18h6M10 10h12v12H10z" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
-                        <defs>
-                            <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                <stop offset="0%" style="stop-color:#667eea"/>
-                                <stop offset="100%" style="stop-color:#764ba2"/>
-                            </linearGradient>
-                        </defs>
-                    </svg>
+                    <img src="Assets/logo watchdog.png" width="32" height="32" viewBox="0 0 32 32">
                     <h1>WATCHDOG</h1>
                 </div>
                 <p class="login-subtitle">Advanced Verbal Abuse Detection System</p>
