--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="login-card">
             <div class="login-header">
                 <div class="logo">
-                    <img src="Assets/logo watchdog.png" width="32" height="32" viewBox="0 0 32 32">
+                    <img src="Assets/logo watchdog.png" width="55" height="55" viewBox="0 0 32 32">
                     <h1>WATCHDOG</h1>
                 </div>
                 <p class="login-subtitle">Advanced Verbal Abuse Detection System</p>
@@ -246,7 +246,7 @@
                 <div class="team-section">
                     <div class="team-header">
                         <h2>Meet Our Team</h2>
-                        <p>The brilliant minds behind WATCHDOG's advanced abuse detection technology</p>
+                        <p>The developers behind WATCHDOG's</p>
                     </div>
                     
                     <div class="team-grid">
