Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 
                 <div class="demo-credentials">
                     <p><strong>Demo Credentials:</strong></p>
-                    <p>User's</s>: rock4rithik@gmail.com / rithik123</p>
+                    <p>User's: rock4rithik@gmail.com / rithik123</p>
                     <p>Admin: admin@watchdog.com / admin123</p>
                 </div>
             </form>
